@@ -41,13 +41,17 @@ typedef struct {
 } sipArrayObject;
 
 
-static int check_writable(sipArrayObject *array);
-static int check_index(sipArrayObject *array, Py_ssize_t idx);
-static void *get_value(sipArrayObject *array, PyObject *value);
-static void *get_slice(sipArrayObject *array, PyObject *value, Py_ssize_t len);
 static void bad_key(PyObject *key);
+static int check_index(sipArrayObject *array, Py_ssize_t idx);
+static int check_writable(sipArrayObject *array);
+static PyObject *create_array(void *data, const sipTypeDef *td,
+        const char *format, size_t stride, Py_ssize_t len, int flags,
+        PyObject *owner);
 static void *element(sipArrayObject *array, Py_ssize_t idx);
-static PyObject *make_array(void *data, const sipTypeDef *td,
+static void *get_slice(sipArrayObject *array, PyObject *value, Py_ssize_t len);
+static const char *get_type_name(sipArrayObject *array);
+static void *get_value(sipArrayObject *array, PyObject *value);
+static void init_array(sipArrayObject *array, void *data, const sipTypeDef *td,
         const char *format, size_t stride, Py_ssize_t len, int flags,
         PyObject *owner);
 
@@ -172,7 +176,7 @@ static PyObject *sipArray_subscript(PyObject *self, PyObject *key)
             return NULL;
         }
 
-        return make_array(element(array->data, start), array->td,
+        return create_array(element(array->data, start), array->td,
                 array->format, array->stride, slicelength,
                 (array->flags & ~SIP_OWNS_MEMORY), array->owner);
     }
@@ -237,7 +241,30 @@ static int sipArray_ass_subscript(PyObject *self, PyObject *key,
         return -1;
     }
 
-    memmove(element(array, start), value_data, len * array->stride);
+    if (array->td != NULL)
+    {
+        const sipClassTypeDef *ctd = (const sipClassTypeDef *)(array->td);
+        sipAssignFunc assign;
+        Py_ssize_t i;
+
+        if ((assign = ctd->ctd_assign) == NULL)
+        {
+            PyErr_Format(PyExc_TypeError,
+                    "a " _SIP_MODULE_FQ_NAME ".array cannot copy '%s'",
+                Py_TYPE(self)->tp_name);
+            return -1;
+        }
+
+        for (i = 0; i < len; ++i)
+        {
+            assign(array->data, start + i, value_data);
+            value_data += array->stride;
+        }
+    }
+    else
+    {
+        memmove(element(array, start), value_data, len * array->stride);
+    }
 
     return 0;
 }
@@ -263,7 +290,7 @@ static int sipArray_getbuffer(PyObject *self, Py_buffer *view, int flags)
 
     if (((flags & PyBUF_WRITABLE) == PyBUF_WRITABLE) && (array->flags & SIP_READ_ONLY))
     {
-        PyErr_SetString(PyExc_BufferError, "object is not writable.");
+        PyErr_SetString(PyExc_BufferError, "object is not writable");
         return -1;
     }
 
@@ -277,7 +304,16 @@ static int sipArray_getbuffer(PyObject *self, Py_buffer *view, int flags)
 
     view->format = NULL;
     if ((flags & PyBUF_FORMAT) == PyBUF_FORMAT)
+    {
+        if (array->format == NULL)
+        {
+            PyErr_SetString(PyExc_BufferError,
+                    "format has not been specified");
+            return -1;
+        }
+
         view->format = (char *)array->format;
+    }
 
     view->ndim = 1;
 
@@ -303,15 +339,86 @@ static PyBufferProcs sipArray_BufferProcs = {
 };
 
 
-/* The instance deallocation function. */
+/*
+ * The instance deallocation function.
+ */
 static void sipArray_dealloc(PyObject *self)
 {
     sipArrayObject *array = (sipArrayObject *)self;
 
     if (array->flags & SIP_OWNS_MEMORY)
-        sip_api_free(array->data);
+    {
+        if (array->td != NULL)
+            ((const sipClassTypeDef *)(array->td))->ctd_array_delete(array->data);
+        else
+            PyMem_Free(array->data);
+    }
     else
+    {
         Py_XDECREF(array->owner);
+    }
+}
+
+
+/*
+ * Implement __repr__ for the type.
+ */
+static PyObject *sipArray_repr(PyObject *self)
+{
+    sipArrayObject *array = (sipArrayObject *)self;
+
+    return PyUnicode_FromFormat(_SIP_MODULE_FQ_NAME ".array(%s, %zd)",
+            get_type_name(array), array->len);
+}
+
+
+/*
+ * Implement __new__ for the type.
+ */
+static PyObject *sipArray_new(PyTypeObject *cls, PyObject *args, PyObject *kw)
+{
+    static char *kwlist[] = {"", "", NULL};
+
+    Py_ssize_t length;
+    PyObject *array, *type;
+    const sipClassTypeDef *ctd;
+
+    if (!PyArg_ParseTupleAndKeywords(args, kw, "O!n:array", kwlist, &sipWrapperType_Type, &type, &length))
+        return NULL;
+
+    ctd = (const sipClassTypeDef *)((sipWrapperType *)type)->wt_td;
+
+    /* We require the array delete helper which was added in ABI v13.4. */
+    if (ctd->ctd_base.td_module->em_api_minor < 4)
+    {
+        PyErr_SetString(PyExc_TypeError,
+                "a " _SIP_MODULE_FQ_NAME ".array can only be created for types using ABI v13.4 or later");
+        return NULL;
+    }
+
+    if (ctd->ctd_array == NULL || ctd->ctd_sizeof == 0)
+    {
+        PyErr_Format(PyExc_TypeError,
+                "a " _SIP_MODULE_FQ_NAME ".array cannot be created for '%s'",
+                Py_TYPE(type)->tp_name);
+        return NULL;
+    }
+
+    if (length < 0)
+    {
+        PyErr_SetString(PyExc_ValueError,
+                "a " _SIP_MODULE_FQ_NAME ".array length cannot be negative");
+        return NULL;
+    }
+
+    /* Create the instance. */
+    if ((array = cls->tp_alloc(cls, 0)) == NULL)
+        return NULL;
+
+    init_array((sipArrayObject *)array, ctd->ctd_array(length), &ctd->ctd_base,
+            NULL, ctd->ctd_sizeof, length, SIP_OWNS_MEMORY, NULL);
+
+    return array;
 }
 
 
@@ -326,7 +433,7 @@ PyTypeObject sipArray_Type = {
     0,                      /* tp_getattr */
     0,                      /* tp_setattr */
     0,                      /* tp_reserved */
-    0,                      /* tp_repr */
+    sipArray_repr,          /* tp_repr */
     0,                      /* tp_as_number */
     &sipArray_SequenceMethods,  /* tp_as_sequence */
     &sipArray_MappingMethods,   /* tp_as_mapping */
@@ -358,7 +465,7 @@ PyTypeObject sipArray_Type = {
     0,                      /* tp_dictoffset */
     0,                      /* tp_init */
     0,                      /* tp_alloc */
-    0,                      /* tp_new */
+    sipArray_new,           /* tp_new */
     0,                      /* tp_free */
     0,                      /* tp_is_gc */
     0,                      /* tp_bases */
@@ -517,56 +624,9 @@ static void *get_slice(sipArrayObject *array, PyObject *value, Py_ssize_t len)
 
     if (!PyObject_IsInstance(value, (PyObject *)&sipArray_Type) || array->td != other->td || strcmp(array->format, other->format) != 0)
     {
-        const char *type;
-
-        if (array->td != NULL)
-        {
-            type = sipTypeName(array->td);
-        }
-        else
-        {
-            switch (*array->format)
-            {
-            case 'b':
-                type = "char";
-                break;
-
-            case 'B':
-                type = "unsigned char";
-                break;
-
-            case 'h':
-                type = "short";
-                break;
-
-            case 'H':
-                type = "unsigned short";
-                break;
-
-            case 'i':
-                type = "int";
-                break;
-
-            case 'I':
-                type = "unsigned int";
-                break;
-
-            case 'f':
-                type = "float";
-                break;
-
-            case 'd':
-                type = "double";
-                break;
-
-            default:
-                type = "";
-            }
-        }
-
         PyErr_Format(PyExc_TypeError,
-                "can only assign another array of %s to the slice", type);
-
+                "can only assign another array of %s to the slice",
+                get_type_name(array));
         return NULL;
     }
 
@@ -574,7 +634,6 @@ static void *get_slice(sipArrayObject *array, PyObject *value, Py_ssize_t len)
     {
         PyErr_Format(PyExc_TypeError,
                 "the array being assigned must have length %zd", len);
-
         return NULL;
     }
 
@@ -583,7 +642,6 @@ static void *get_slice(sipArrayObject *array, PyObject *value, Py_ssize_t len)
         PyErr_Format(PyExc_TypeError,
                 "the array being assigned must have stride %zu",
                 array->stride);
-
         return NULL;
     }
 
@@ -592,9 +650,66 @@ static void *get_slice(sipArrayObject *array, PyObject *value, Py_ssize_t len)
 
 
 /*
- * Do the work of creating an array.
+ * Get the name of the type of an element of an array.
  */
-static PyObject *make_array(void *data, const sipTypeDef *td,
+static const char *get_type_name(sipArrayObject *array)
+{
+    const char *type_name;
+
+    if (array->td != NULL)
+    {
+        type_name = sipTypeName(array->td);
+    }
+    else
+    {
+        switch (*array->format)
+        {
+        case 'b':
+            type_name = "char";
+            break;
+
+        case 'B':
+            type_name = "unsigned char";
+            break;
+
+        case 'h':
+            type_name = "short";
+            break;
+
+        case 'H':
+            type_name = "unsigned short";
+            break;
+
+        case 'i':
+            type_name = "int";
+            break;
+
+        case 'I':
+            type_name = "unsigned int";
+            break;
+
+        case 'f':
+            type_name = "float";
+            break;
+
+        case 'd':
+            type_name = "double";
+            break;
+
+        default:
+            type_name = "";
+        }
+    }
+
+    return type_name;
+}
+
+
+
+/*
+ * Create an array for the C API.
+ */
+static PyObject *create_array(void *data, const sipTypeDef *td,
         const char *format, size_t stride, Py_ssize_t len, int flags,
         PyObject *owner)
 {
@@ -603,6 +718,19 @@ static PyObject *make_array(void *data, const sipTypeDef *td,
     if ((array = PyObject_NEW(sipArrayObject, &sipArray_Type)) == NULL)
         return NULL;
 
+    init_array(array, data, td, format, stride, len, flags, owner);
+
+    return (PyObject *)array;
+}
+
+
+/*
+ * Initialise an array.
+ */
+static void init_array(sipArrayObject *array, void *data, const sipTypeDef *td,
+        const char *format, size_t stride, Py_ssize_t len, int flags,
+        PyObject *owner)
+{
     array->data = data;
     array->td = td;
     array->format = format;
@@ -620,8 +748,6 @@ static PyObject *make_array(void *data, const sipTypeDef *td,
         Py_XINCREF(owner);
         array->owner = owner;
     }
-
-    return (PyObject *)array;
 }
 
 
@@ -634,6 +760,8 @@ PyObject *sip_api_convert_to_array(void *data, const char *format,
         Py_ssize_t len, int flags)
 {
     size_t stride;
+
+    assert(len >= 0);
 
     if (data == NULL)
     {
@@ -676,13 +804,12 @@ PyObject *sip_api_convert_to_array(void *data, const char *format,
         break;
 
     default:
-        stride = 0;
+        PyErr_Format(PyExc_ValueError, "'%c' is not a supported format",
+                format);
+        return NULL;
     }
 
-    assert(stride > 0);
-    assert(len >= 0);
-
-    return make_array(data, NULL, format, stride, len, flags, NULL);
+    return create_array(data, NULL, format, stride, len, flags, NULL);
 }
 
 
@@ -701,5 +828,5 @@ PyObject *sip_api_convert_to_typed_array(void *data, const sipTypeDef *td,
     assert(stride > 0);
     assert(len >= 0);
 
-    return make_array(data, td, format, stride, len, flags, NULL);
+    return create_array(data, td, format, stride, len, flags, NULL);
 }
