@@ -54,7 +54,7 @@ static int sipWrapperType_init(sipWrapperType *self, PyObject *args,
 static int sipWrapperType_setattro(PyObject *self, PyObject *name,
         PyObject *value);
 
-static PyTypeObject sipWrapperType_Type = {
+PyTypeObject sipWrapperType_Type = {
     PyVarObject_HEAD_INIT(NULL, 0)
     _SIP_MODULE_FQ_NAME ".wrappertype", /* tp_name */
     sizeof (sipWrapperType),    /* tp_basicsize */
