@@ -3,6 +3,8 @@ v6.6.2 16th May 2022
     corresponding pseudo-members.
   - Any config settings passed by a PEP 571 frontend are now used.
   - The 'array' type is now accessible from the sip module.
+  - The ABI v13 'array' can now create one dimensional arrays of wrapped types
+    that can be modified in situ.
   - The latest version of ABI v13 is v13.4.0.
   - The latest version of ABI v12 is v12.11.0.
   - Bug fixes.
